Comments system added.

--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
 <script src= "./app/controllers/contactController.js"></script>
 <script src= "./app/controllers/postController.js"></script>
 <script src= "./app/controllers/editController.js"></script>
-
+<script src= "./app/directives/commentDirective.js"></script>
 <script src= "./app/controllers/loginController.js"></script>
 <script src= "./app/controllers/registerController.js"></script>
 
